--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -166,9 +166,7 @@
 
     <footer class="footer">
       <div class="container">
-        <p>
-          <a href="/api/friends">API Friends List</a> |
-          <a href="">Heroku link</a>
+        <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/olevina/FriendFinder">Git Repository</a>
       </div>
     </footer>
 
